examples/test/testpolicy5309.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5309
  namespace: namespace344
spec:
  podSelector:
    matchLabels:
      key3: value15
      key17: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value41
          key26: value15
          key2: value2
      podSelector:
        matchLabels:
          key26: value19
          key4: value34
